--- a/scss/modules/_features.scss
+++ b/scss/modules/_features.scss
@@ -7,6 +7,9 @@
 }
 
 #home-features {
+  > .container {
+      @include p-2;
+    }
   @media (max-width: $break-900) {
     > .container {
       @include p-2;
