--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,6 +28,7 @@
 @import "modules/site-header";
 @import "modules/footer";
 @import "modules/features";
+@import "modules/testimonials";
 
 // Templates
 @import "templates/page-content";
