--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -24,6 +24,8 @@ $break-900: 56.25em; // 900px
 
 $break-992: 62em; // 992px
 
+$break-1100: 68.75em; // 1100px
+
 $break-1200: 75em; // 1200px 
 
 $break-1600: 100em; // 1600px
