--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -19,6 +19,7 @@ $max-black: #111;
 $max-charcoal: #222;
 $max-grey: #333;
 $max-grey-555: #555;
+$max-grey-999: #999;
 $max-grey-CCC: #CCC;
 $max-grey-EEE: #EEE;
 $max-white: #FAFAFA;
