--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -8,7 +8,7 @@
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
-  border: .2em solid transparent;
+  border: .2rem solid transparent;
   padding: .5em 1em;
   font-size: 1em;
   border-radius: .25em;
@@ -73,7 +73,7 @@
 
 @mixin button-outline {
   background-color: transparent;
-  border: .2em solid currentColor;  
+  border: .2rem solid currentColor;  
   text-align: center;
 
   &:hover,
