--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -234,7 +234,7 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
   label {
     display: block;
     border: none;
-    @include Montserrat;
+    @include Varela;
     font-size: .75em;
     font-weight: iniital;
     letter-spacing: .08rem;
