--- a/scss/components/navigation/_navigation.scss
+++ b/scss/components/navigation/_navigation.scss
@@ -239,7 +239,7 @@ $box-size: 40px;
 }
 
 .dropdown-item {
-  white-space: initial;
+  //white-space: initial;
 }
 
 @media (min-width: $break-992) {
