--- a/scss/theme/_ca-theme-colors.scss
+++ b/scss/theme/_ca-theme-colors.scss
@@ -109,6 +109,14 @@
   color: $max-grey-EEE;
 }
 
+.c-grey-555 {
+  color: $max-grey-555;
+}
+
+.c-grey-999 {
+  color: $max-grey-999;
+}
+
 .c-warning {
  color: $max-red;
 }
