--- a/css/styles.css
+++ b/css/styles.css
@@ -2629,7 +2629,7 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
 .feature .card[class*="theme-"]:hover {
   color: #555;
   background-color: #FAFAFA;
-  box-shadow: 0 0 4rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 4rem rgba(0, 0, 0, 0.3);
 }
 
 .feature .card[class*="theme-"]:hover .btn {
@@ -2689,6 +2689,53 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
           transform: none;
 }
 
+.carousel-testimonial .carousel-indicators {
+  bottom: -3rem;
+}
+
+.carousel-testimonial .carousel-indicators li {
+  background-color: #777;
+  box-shadow: 0 0 0 .25rem #FFF;
+  border-radius: 50%;
+  -webkit-filter: grayscale(60%) drop-shadow(0 0.1rem 0.2rem rgba(0, 0, 0, 0.2));
+          filter: grayscale(60%) drop-shadow(0 0.1rem 0.2rem rgba(0, 0, 0, 0.2));
+  height: 100%;
+  max-height: 4rem;
+  max-width: 4rem;
+  margin-right: 1rem;
+  margin-bottom: 0;
+  margin-left: 1rem;
+  text-indent: initial;
+  transition: .35s ease;
+  will-change: max-height max-width;
+}
+
+.carousel-testimonial .carousel-indicators li .avatar {
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  height: 100%;
+  width: 100%;
+  line-height: 0;
+  opacity: .75;
+  transition: .4s ease;
+}
+
+.carousel-testimonial .carousel-indicators li.active, .carousel-testimonial .carousel-indicators li:hover {
+  background-color: #FFF;
+  -webkit-filter: drop-shadow(0 0.4rem 0.2rem rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(0 0.4rem 0.2rem rgba(0, 0, 0, 0.3));
+}
+
+.carousel-testimonial .carousel-indicators li.active .avatar, .carousel-testimonial .carousel-indicators li:hover .avatar {
+  opacity: 1;
+}
+
+.carousel-testimonial .carousel-indicators li.active {
+  max-height: 5rem;
+  max-width: 5rem;
+}
+
 .carousel-testimonial .card-block {
   width: 100%;
 }
@@ -2703,22 +2750,26 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
 }
 
 .carousel-testimonial .quotee {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 1.45em;
   padding-top: 1em;
 }
 
+.carousel-testimonial .quotee .text-wrap {
+  line-height: 2rem;
+}
+
 @media (max-width: 33.75em) {
   .carousel-testimonial .quotee {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -2733,19 +2784,15 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
   letter-spacing: .03rem;
 }
 
+.carousel-testimonial .avatar {
+  margin-bottom: .625rem;
+}
+
 @media (min-width: 33.75em) {
   .carousel-testimonial .avatar {
     float: left;
     margin-right: 1rem;
     margin-bottom: 0;
-  }
-  @supports ((-webkit-shape-outside: circle()) or (shape-outside: circle())) {
-    .carousel-testimonial .avatar {
-      -webkit-shape-outside: circle();
-              shape-outside: circle();
-      margin-top: .125rem;
-      margin-right: 2rem;
-    }
   }
 }
 
