--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -28,7 +28,7 @@
     background-image: url(../images/bg/bg-hero-user-man.jpg);
   }
 
-  @include filter-luminosity;
+  //@include filter-luminosity;
 
 }
 
