--- a/scss/templates/_page-content.scss
+++ b/scss/templates/_page-content.scss
@@ -1,13 +1,11 @@
 .page-content {
-  @include pt-2;
+  padding-top: 7em;
+  padding-bottom: 7em;
   @include fade-in;
-  > .container {
-    
-  }
   > .container {
     //@include pt-3;
     //@include pb-2;
-    max-width: 85em;
+    //max-width: 70em;
     @include pr-pl-3;
     > .btn {
       margin-top: 1rem;
@@ -27,10 +25,10 @@
       @include mw-100p;
     }
   }
-  // > 768
-  @media (min-width: $break-640) {
+  // > 1200
+  @media (min-width: $break-992) {
 
-    padding-top: 10vh;
+    padding-top: 10vw;
     padding-bottom: 10vh;
 
     & + .page-content {
